Refactor: Replace `Collections` utility methods with `List.of` and `Map.of` for brevity and immutability across modules